--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -16,3 +16,24 @@
 .main{
     font-family: 'Lato', sans-serif;
 }
+
+/* styles for spinner */
+.spinner-dark {
+    width:25px;
+    height:25px;
+    border-radius:50%;
+    background:conic-gradient(#0000 10%,#4B5563);
+    -webkit-mask:radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+    animation: s3 1s infinite linear;
+}
+@keyframes s3 {to{transform: rotate(1turn)}}
+
+.spinner-white {
+    width:25px;
+    height:25px;
+    border-radius:50%;
+    background:conic-gradient(#0000 10%,#FFF);
+    -webkit-mask:radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+    animation: s3 1s infinite linear;
+}
+@keyframes s3 {to{transform: rotate(1turn)}}
